# 07NotePad

./: .gitignore  LICENSE  NotePad.sln  one_note_pad.sln  one_notepad.sln
Configurations/: .clang-format  CMakeLists.txt
Docs/Change/: V1.0.txt
Docs/Example/: 123  456  new 4.txt  new 5.txt  new 6.txt
Package/: license.txt  packaging_code.nsi
Resources/: note_pad.qrc  one_note_pad.qrc  one_notepad.qrc  one_notepad.rc
Source/: NotePad.vcxproj  NotePad.vcxproj.filters  custom_menu_bar.cpp  custom_menu_bar.h  custom_settings.cpp  custom_settings.h  custom_tab_bar.cpp  custom_tab_bar.h  custom_tab_widget.cpp  custom_tab_widget.h  custom_text_edit.cpp  custom_text_edit.h  custom_tool_bar.cpp  custom_tool_bar.h  dir_workspace_dock.cpp  dir_workspace_dock.h  dir_workspace_tree_view.cpp  dir_workspace_tree_view.h  directory_dock_widget.cpp  directory_dock_widget.h  directory_workspace_dock.cpp  directory_workspace_dock.h  directory_workspace_tree_view.cpp  directory_workspace_tree_view.h  folder_workspace_dock_widget.cpp  folder_workspace_dock_widget.h  folder_workspace_dock_widget.ui  framework.h  main.cpp  main_core.cpp  main_core.h  main_window.cpp  main_window.h  message_bus.cpp  message_bus.h  recent_files_manager.cpp  recent_files_manager.h  text_widget.cpp  text_widget.h
Source/OneNotePad/: custom_menu_bar.cpp  custom_menu_bar.h  custom_settings.cpp  custom_settings.h  custom_status_bar.cpp  custom_status_bar.h  custom_tab_bar.cpp  custom_tab_bar.h  custom_tab_widget.cpp  custom_tab_widget.h  custom_text_edit.cpp  custom_text_edit.h  custom_tool_bar.cpp  main.cpp  (+40 more)
(+17 files in other folders)
